<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.SenderFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/senderTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:text="@string/senderScreenTitle"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sendingMsgTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginTop="126dp"
                android:layout_marginEnd="@dimen/margin_default"
                android:hint="@string/secret_message"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/senderTitleTextView" />

            <Button
                android:id="@+id/tempFinishSendingBtn"
                android:layout_width="0dp"
                android:layout_height="73dp"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginTop="190dp"
                android:layout_marginEnd="@dimen/margin_default"
                android:layout_marginBottom="32dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/finish_sending"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/senderTitleTextView"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/flashlightImageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="126dp"
                android:contentDescription="@string/flashlight"
                android:rotation="-90"
                android:scaleType="fitCenter"
                android:src="@android:drawable/ic_lock_silent_mode"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sendingMsgTextView"
                app:layout_constraintVertical_bias="0.717" />

            <ImageView
                android:id="@+id/lightImageView"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/margin_default"
                android:contentDescription="@string/flashing_light"
                android:scaleType="fitXY"
                android:src="@android:drawable/arrow_down_float"
                android:tint="#FFC107"
                android:tintMode="multiply"
                app:layout_constraintBottom_toBottomOf="@+id/flashlightImageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sendingMsgTextView"
                app:layout_constraintVertical_bias="0.785" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>